--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Havamana</string>
     <string name="hs_info">Search the city to get weather information</string>
     <string name="hs_search_placeholder">City name</string>
+    <string name="hs_search_enter_valid">Please enter valid city</string>
 </resources>
